// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FancyInputComponent > should render the highlights correctly based on the matched variables in text 1`] = `
<div
  id="root2"
  ng-version="20.3.3"
>
  <div
    class="fancy-input-container"
  >
    <input
      class="fancy-input-content fancy-input-element ng-untouched ng-valid ng-dirty"
      placeholder=""
      type="text"
    />
    <div
      class="fancy-input-backdrop"
    >
      <div
        class="fancy-input-content fancy-input-highlights"
      >
        <span>
          some text 
        </span>
        <!--container-->
        <!--container-->
        <!--container-->
        <app-fancy-input-marker>
          <mark
            class="fancy-input-marker__invalid"
          >
            {{variable1}}
          </mark>
          <!--container-->
        </app-fancy-input-marker>
        <!--container-->
        <span>
           then 
        </span>
        <!--container-->
        <!--container-->
        <!--container-->
        <app-fancy-input-marker>
          <mark
            class="fancy-input-marker__invalid"
          >
            {{variable2}}
          </mark>
          <!--container-->
        </app-fancy-input-marker>
        <!--container-->
        <span>
           is next
        </span>
        <!--container-->
        <!--container-->
        <!--container-->
      </div>
    </div>
  </div>
</div>
`;

exports[`FancyInputComponent > should set component value when input value changes 1`] = `
<div
  id="root1"
  ng-version="20.3.3"
>
  <div
    class="fancy-input-container"
  >
    <input
      class="fancy-input-content fancy-input-element ng-untouched ng-valid ng-dirty"
      placeholder=""
      type="text"
    />
    <div
      class="fancy-input-backdrop"
    >
      <div
        class="fancy-input-content fancy-input-highlights"
      >
        <span>
          some text
        </span>
        <!--container-->
        <!--container-->
        <!--container-->
      </div>
    </div>
  </div>
</div>
`;
